@@ -43,6 +43,7 @@ sig
   val status: string -> unit
   val report: string -> unit
   val protocol_message: Properties.T -> string -> unit
+  exception TRACING_LIMIT of int
 end;
 
 structure Output: OUTPUT =
@@ -110,6 +111,8 @@ fun prompt s = ! Private_Hooks.prompt_fn (output s);
 fun status s = ! Private_Hooks.status_fn (output s);
 fun report s = ! Private_Hooks.report_fn (output s);
 fun protocol_message props s = ! Private_Hooks.protocol_message_fn props (output s);
+
+exception TRACING_LIMIT of int;
 
 end;
 
